web-infras/parser/tests/fixtures/babel/es2015/uncategorised/246/output.txt
[SyntaxError]: 'arguments' is not allowed in class field initializer or static initialization block (1,16)
1|"use strict"; (arguments, a) => 42
 |              ^
[SyntaxError]: 'arguments'/'eval' can't be defined or assigned to in strict mode code (1,16)
1|"use strict"; (arguments, a) => 42
 |              ^
[SyntaxError]: 'arguments'/'eval' can't be defined or assigned to in strict mode code (1,16)
1|"use strict"; (arguments, a) => 42
 |              ^
